# ansible-zsh

./: .gitignore  .yamllint  AGENTS.md  CHANGELOG.md  README.md  TODO.md  pyproject.toml  requirements.yml
.ansible/roles/: jahrik.zsh
.github/workflows/: ci.yml  cicd.yml
defaults/: main.yml
handlers/: main.yml
meta/: argument_specs.yml  main.yml
molecule/default/: converge.yml  molecule.yml  requirements.yml  verify.yml
molecule/localhost/: converge.yml  molecule.yml  verify.yml
molecule/steamdeck/: converge.yml  molecule.yml  prepare.yml  verify.yml
tasks/: archlinux.yml  darwin.yml  debian.yml  install.yml  main.yml  steamdeck.yml  steamos.yml  uninstall.yml
templates/: ansible.zsh.j2  aws.zsh.j2  chef.zsh.j2  export.zsh.j2  functions.zsh.j2  p10k.zsh.j2  prompt.zsh.j2  zshenv.j2  zshrc.j2
tests/: test.yml
vars/: main.yml
