[project]
name = "ansible-zsh"
version = "0.1.0"
description = "Ansible role for zsh configuration with SteamOS and macOS support"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible-core>=2.16,<2.17",
    "ansible-lint>=26.4.0",
    "molecule>=26.4.0",
    "molecule-plugins[docker]>=25.8.12",
    "yamllint>=1.38.0",
]
